--- a/admin/historyPesanan.html
+++ b/admin/historyPesanan.html
@@ -200,7 +200,7 @@
           </div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Tidak</button>
-            <a class="btn btn-primary" href="login.html">Ya</a>
+            <a class="btn btn-danger" href="login.html">Ya</a>
           </div>
         </div>
       </div>
