--- a/admin/login.html
+++ b/admin/login.html
@@ -35,7 +35,7 @@
                       <h1 class="h4 text-gray-900 mb-4">Admin Apotek Kita</h1>
                       <p class="text-danger"></p>
                     </div>
-                    <form class="user" method="POST" action="">
+                    <form class="user" method="POST">
                       <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" class="form-control form-control-user" id="username" autocomplete="off" placeholder="Masukkan Username" name="username" required />
