--- a/admin/tambahObat.html
+++ b/admin/tambahObat.html
@@ -7,11 +7,9 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Tambah Obat</title>
-    <!-- Custom fonts for this template-->
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/img/icon.ico" />
     <link href="../assets/vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-
-    <!-- Custom styles for this template-->
     <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet" />
     <link href="../assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
   </head>
@@ -26,32 +24,22 @@
           <div class="sidebar-brand-icon">
             <i class="fas fa-clinic-medical"></i>
           </div>
-          <div class="sidebar-brand-text mx-3">APOTEK KITA</div>
+          <div class="sidebar-brand-text mx-3">DIGITAPP</div>
         </a>
-
-        <!-- Divider -->
         <hr class="sidebar-divider my-0" />
-
-        <!-- Nav Item - Dashboard -->
         <li class="nav-item">
           <a class="nav-link" href="stokObat.html">
             <i class="fas fa-fw fa-prescription-bottle-alt"></i>
             <span>Stok Obat</span></a
           >
         </li>
-
-        <!-- Nav Item - Charts -->
         <li class="nav-item">
           <a class="nav-link" href="historyPesanan.html">
             <i class="fas fa-fw fa-scroll"></i>
             <span>History Pesanan</span></a
           >
         </li>
-
-        <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block" />
-
-        <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
@@ -69,46 +57,13 @@
               <i class="fa fa-bars"></i>
             </button>
 
-            <!-- Topbar Search -->
-            <!-- <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-              <div class="input-group">
-                <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" />
-                <div class="input-group-append">
-                  <button class="btn btn-primary" type="button">
-                    <i class="fas fa-search fa-sm"></i>
-                  </button>
-                </div>
-              </div>
-            </form> -->
-
             <!-- Topbar Navbar -->
             <ul class="navbar-nav ml-auto">
-              <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-              <!-- <li class="nav-item dropdown no-arrow d-sm-none">
-                <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-search fa-fw"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                  <form class="form-inline mr-auto w-100 navbar-search">
-                    <div class="input-group">
-                      <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" />
-                      <div class="input-group-append">
-                        <button class="btn btn-primary" type="button">
-                          <i class="fas fa-search fa-sm"></i>
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </li> -->
-
-              <!-- Nav Item - User Information -->
               <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
+                  <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="displayName">Admin</span>
                   <img class="img-profile rounded-circle" src="../assets/img/profile/default.png" />
                 </a>
-                <!-- Dropdown - User Information -->
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                   <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -136,44 +91,54 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <form id="fileform" method="POST" enctype="multipart/form-data">
+                    <form id="tambahObat">
+                      <div class="row form-group">
+                        <label class="col-md-3 text-md-right" for="nama">Nama</label>
+                        <div class="col-md-9">
+                          <input type="text" class="form-control" autocomplete="off" name="nama" id="nama" required />
+                        </div>
+                      </div>
                       <div class="row form-group">
                         <label class="col-md-3 text-md-right" for="jenis">Jenis</label>
                         <div class="col-md-9">
                           <select class="form-control" name="jenis" id="jenis">
-                            <option value="B">Obat Batuk</option>
-                            <option value="D">Obat Demam</option>
-                            <option value="F">Obat Flu</option>
-                            <option value="S">Suplemen</option>
+                            <option value="batuk">Obat Batuk</option>
+                            <option value="demam">Obat Demam</option>
+                            <option value="flu">Obat Flu</option>
+                            <option value="suplemen">Suplemen</option>
                           </select>
                         </div>
                       </div>
                       <div class="row form-group">
-                        <label class="col-md-3 text-md-right" for="nama">Nama</label>
+                        <label class="col-md-3 text-md-right" for="tipe">Tipe</label>
                         <div class="col-md-9">
-                          <input type="text" class="form-control" name="nama" id="nama" />
+                          <select class="form-control" name="tipe" id="tipe">
+                            <option value="bubuk">Bubuk</option>
+                            <option value="tablet">Tablet</option>
+                            <option value="kapsul">Kapsul</option>
+                            <option value="cair">Cair</option>
+                          </select>
                         </div>
                       </div>
                       <div class="row form-group">
                         <label class="col-md-3 text-md-right" for="stok">Stok</label>
                         <div class="col-md-9">
-                          <input type="number" min="1" class="form-control" name="stok" id="stok" value="1" />
+                          <input type="number" onchange="validasi()" class="form-control" name="stok" id="stok" value="1" />
                         </div>
                       </div>
                       <div class="row form-group">
                         <label class="col-md-3 text-md-right" for="harga">Harga</label>
                         <div class="col-md-9">
-                          <input type="number" min="1000" class="form-control" name="harga" id="harga" value="1000" />
+                          <input type="number" onchange="validasi()" step="1000" class="form-control" name="harga" id="harga" value="1000" />
                         </div>
                       </div>
                       <hr />
                       <div class="row form-group justify-content-end">
                         <div class="col-md-9">
-                          <button type="submit" id="simpan" data-toggle="tooltip" class="btn btn-primary btn-icon-split">
+                          <button type="submit" data-toggle="tooltip" class="btn btn-primary btn-icon-split">
                             <span class="icon"><i class="fa fa-save"></i></span>
                             <span class="text">Simpan</span>
                           </button>
-                          <button type="reset" class="btn btn-secondary">Reset</button>
                         </div>
                       </div>
                       <div class="text-center">
@@ -188,16 +153,6 @@
           <!-- /.container-fluid -->
         </div>
         <!-- End of Main Content -->
-
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-          <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-              <!-- <span>Copyright &copy; Your Website 2019</span> -->
-            </div>
-          </div>
-        </footer>
-        <!-- End of Footer -->
       </div>
       <!-- End of Content Wrapper -->
     </div>
@@ -208,7 +163,6 @@
       <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -220,22 +174,16 @@
           </div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Tidak</button>
-            <a class="btn btn-danger" href="login.html">Ya</a>
+            <a class="btn btn-danger" onclick="logoutUser()" href="#">Ya</a>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript-->
     <script src="../assets/vendor/jquery/jquery.min.js"></script>
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
     <script src="../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
     <script src="../assets/js/sb-admin-2.min.js"></script>
-    <script src="../assets/vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="../assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="../assets/js/apps/tambahObat.js"></script>
   </body>
 </html>
