--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Login</title>
+    <title>Lobby</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/img/icon.ico" />
     <link href="./assets/vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/fontfamily.css" rel="stylesheet" type="text/css" />
