--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- End Kolom Admin -->
         <!-- Kolom Pembeli -->
         <div class="col-md-6 mt-auto">
-          <a href="#" class="card o-hidden border-0 shadow-lg my-5 text-decoration-none text-dark">
+          <a href="./user/listObat.html" class="card o-hidden border-0 shadow-lg my-5 text-decoration-none text-dark">
             <div class="card-body p-0 text-center">
               <img class="img-fluid px-3 px-sm-4 mt-3 mb-3" src="./assets/img/svg/buyer.svg" alt="" style="height: 400px" />
             </div>
