--- a/user/listObat.html
+++ b/user/listObat.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Lobby</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/img/icon.ico" />
     <link href="../assets/vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/fontfamily.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet" />
