--- a/user/listObat.html
+++ b/user/listObat.html
@@ -25,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <a href="#" data-target="#keranjang" data-toggle="modal" class="nav-link">0 <i class="fas fa-shopping-cart"></i></a>
+            <a href="#" data-target="#keranjang" data-toggle="modal" class="nav-link" id="logoKeranjang">0 <i class="fas fa-shopping-cart"></i></a>
           </li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
@@ -61,7 +61,7 @@
                       <th>Nama</th>
                       <th>Jenis</th>
                       <th>Tipe</th>
-                      <th>Stok</th>
+                      <th>Jumlah</th>
                       <th>Harga</th>
                       <th>Aksi</th>
                     </tr>
