--- a/user/listObat.html
+++ b/user/listObat.html
@@ -25,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <a href="#" data-target="#keranjang" data-toggle="modal" class="nav-link" id="logoKeranjang">0 <i class="fas fa-shopping-cart"></i></a>
+            <a href="#" onclick="getKeranjang()" data-target="#keranjang" data-toggle="modal" class="nav-link" id="logoKeranjang">0 <i class="fas fa-shopping-cart"></i></a>
           </li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
@@ -70,7 +70,7 @@
                   <tfoot>
                     <tr>
                       <td class="text-center" colspan="5">Total Harga</td>
-                      <td class="text-center">0</td>
+                      <td id="totalKeranjang" colspan="2">0</td>
                     </tr>
                   </tfoot>
                 </table>
