--- a/user/listObat.html
+++ b/user/listObat.html
@@ -25,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <a href="#" onclick="getKeranjang()" data-target="#keranjang" data-toggle="modal" class="nav-link" id="logoKeranjang">0 <i class="fas fa-shopping-cart"></i></a>
+            <a href="#" onclick="" data-target="#keranjang" data-toggle="modal" class="nav-link" id="logoKeranjang">0 <i class="fas fa-shopping-cart"></i></a>
           </li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
