--- a/user/listObat.html
+++ b/user/listObat.html
@@ -78,15 +78,15 @@
             </div>
             <div class="form-group container">
               <label for="nama">Nama</label>
-              <input type="text" class="form-control form-control-user" id="nama" autocomplete="off" placeholder="Masukkan Nama" name="nama" required />
+              <input type="text" class="form-control form-control-user" id="namaCheckout" autocomplete="off" placeholder="Masukkan Nama" name="nama" required />
             </div>
             <div class="form-group container">
               <label for="alamat">Alamat</label>
-              <input type="text" class="form-control form-control-user" id="alamat" autocomplete="off" placeholder="Masukkan Alamat" name="alamat" required />
+              <input type="text" class="form-control form-control-user" id="alamatCheckout" autocomplete="off" placeholder="Masukkan Alamat" name="alamat" required />
             </div>
             <div class="form-group container-fluid">
               <label for="nolep">No Telepon</label>
-              <input type="number" class="form-control form-control-user" id="nolep" autocomplete="off" placeholder="Masukkan No Telepon" name="nolep" required />
+              <input type="number" class="form-control form-control-user" id="nolepCheckout" autocomplete="off" placeholder="Masukkan No Telepon" name="nolep" required />
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
