--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body class="bg-gradient-primary">
     <div class="container-fluid">
+      <h1 class="text-center text-white mt-5">Digital Appotek</h1>
       <div class="row">
         <!-- Kolom Admin -->
         <div class="col-md-6">
