--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="card-footer text-center">
               <!-- <h2>Masuk Sebagai Admin</h2> -->
-              <h2>Ngadmin</h2>
+              <h2>Masuk Sebagai Admin</h2>
             </div>
           </a>
         </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="card-footer text-center">
               <!-- <h2>Masuk Sebagai Pembeli</h2> -->
-              <h2>Ngobat (<b>Belom beres</b>)</h2>
+              <h2>Masuk Sebagai Pembeli</h2>
             </div>
           </a>
         </div>
